# SnakeProject

./: README.md
SnakeProject/: CMakeLists.txt  main.cpp  resources.qrc  snakewidget.cpp  snakewidget.h
